added some styling to the nav bar

--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -9,3 +9,21 @@
   position: absolute;
   right: 5%;
 }
+
+nav ul{
+  display: flex;
+}
+
+nav li{
+  margin-left: 2rem;
+  margin-top: 3rem;
+}
+
+.comp-name{
+  display: flex;
+}
+
+.comp-name img{
+  border-radius: 50%;
+  margin-right: 2rem;
+}
